# kiri-desktop-old

./: .gitignore  Cargo.toml  README.md  Vagrantfile  d5.example.toml  rustfmt.toml
.cargo/: config.toml
.fleet/: settings.json
.github/dependencies/: action.yml
.github/workflows/: ci.yml  rust-clippy.yml  rust.yml
d5/: Cargo.toml  README.md
d5/src/: cli.rs  config.rs  env.rs  interface.rs  main.rs  notify.rs  proc.rs  session.rs
d5/src/dbus/: mod.rs
gyaku/: Cargo.toml  README.md
gyaku/src/: event_loop.rs  main.rs  state.rs  winit_temp.rs
gyaku/src/backend/: drm.rs  mod.rs  winit.rs  x11.rs
gyaku/src/handlers/: buffer.rs  compositor.rs  data_device.rs  dnd.rs  input.rs  mod.rs  seat.rs  shm.rs  xdg_shell.rs
gyaku/src/shell/: mod.rs
gyaku/src/shell/grabs/: mod.rs  move_grab.rs  resize_grab.rs
gyaku/src/util/: input.rs
gyaku/src/xwayland/: mod.rs
kiri/: Cargo.toml
kiri/src/: cursor.rs  drawing.rs  focus.rs  input_handler.rs  main.rs  render.rs  state.rs  udev.rs  winit.rs  x11.rs
kiri/src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
playbooks/: README.md  playbook.yml
playbooks/files/: d5-wayland.desktop  d5.desktop  openbox.toml
src/: cli.rs  env.rs  interface.rs  main.rs  notify.rs  session.rs
src/dbus/: notifier.rs
