[package]
name = "d5"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = { version = "0.3.2", features = ["default_features", "log", "tokio_runtime"] }
chrono = "0.4.23"
clap = "4.1.1"
color-eyre = "0.6.2"
directories = "4.0.1"
dotenvy = "0.15.6"
futures = "0.3.25"
gvariant = "0.5.0"
lazy_static = "1.4.0"
logind-zbus = "3.1.0"
parking_lot = { version = "0.12.1", features = ["arc_lock", "deadlock_detection"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
shell-words = "1.1.0"
test-log = "0.2.11"
tokio = { version = "1.24.1", features = ["full", "tracing"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
zbus = { version = "3.7.0", features = ["tokio", "chrono", "gvariant", "xml"] }
