[package]
name = "gyaku"
version = "0.1.0"
edition = "2021"
description = "The backwards wayland compositor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
image = {version = "0.24.5", default-features = false, optional = true}
color-eyre = "0.6.2"
directories = "4.0.1"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-async = "2.7.0"
thiserror = "1"
xcursor = {version = "0.3.4", optional = true}
xkbcommon = "0.5.0"
smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0" }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-slog = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["tracing", "serde", "serde_json", "regex", "env-filter", "json", "time"] }
wayland-server = { version = "0.30.0", features = ["log"] }
zbus = "3.8.0"
# Extras
gdk4-wayland = "0.5.5"
wayland-scanner = "0.30.0"
wayland-protocols-wlr = "0.1.0"
clipboard_wayland = "0.2.0"