[package]
name = "kiri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
directories = "4.0.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
slog = "2.7.0"
smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0" }
tracing = { version = "0.1.37", features = ["log"] }
tracing-slog = "0.2.0"
wayland-protocols = "0.30.0"
wayland-server = { version = "0.30.0", features = ["log"] }
